[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["Jan Vlcinsky <jan.vlcinsky@tamtamresearch.com>"]

[tool.poetry.dependencies]
python = "^3.7"
prefect = {extras = ["gitlab"], version = "^0.14.21"}
boto3 = "^1.17.93"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
